# octopus

./: README  STATUS  TODO  launch  octopus.pro
datas/: database  helpmsg  logo
datas/help/: addgroup  channels  chpasswd  closesession  join  kick  lsports  lssessions  modwall  news  pollwall_display_count  quit  realias  sendmsg  showmsg  subscribe  tell  unsubscribe
interfaces/: LogPlugin.h  Plugin.h  debug.h  interfaces.pro  octlog.cpp  octlog.h
octopus/: .cvsignore  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  Programming.txt  README  TODO  configure.in  mkinstalldirs  svn-commit.tmp
octopus/datas/: .cvsignore
octopus/interfaces/: ConnectionPlugin.h  DatabasePlugin.h  DefaultPlugin.h  ExtendedPlugin.h  Makefile.am  Plugin.h  PluginManagerInterface.h  PrePostPlugin.h
octopus/plugins/: Makefile.am
octopus/plugins/connect/: Connection.cpp  Connection.h  Makefile.am  Server.cpp  Server.h  SocketManager.cpp  SocketManager.h  UserManager.cpp  UserManager.h  clientsocket.cpp  server.h  simpleserver.h
octopus/src/: .cvsignore  Main.cpp  Makefile.am  PluginManager.cpp  PluginManager.h  src.pro
octopus/templates/: cpp  h
octopus/utils/: DebugUtils.h  Makefile.am  Utils.cpp  Utils.h  Version.h
plugins/: plugins.pro
plugins/connect/: clientsocket.cpp  clientsocket.h  connect.pro  server.cpp  server.h  simpleserver.cpp  (+1 more)
qoctopus/: launch  qoctopus.pro
qtlite/: INSTALL  Makefile  PLATFORMS  README  README-QT.TXT  autogen.sh  configure
src/: Main.cpp  PluginManager.cpp  PluginManager.h  src.pro
trunk2/: README  STATUS  TODO
(+524 files in other folders)
