INCLUDES = -I$(top_srcdir)/interfaces -I$(top_srcdir)/utils
lib_LTLIBRARIES =  libconnect.la
libconnect_la_LIBADD = $(top_builddir)/interfaces/libinterfaces.la $(top_builddir)/utils/libutils.la
libconnect_la_SOURCES = Connection.cpp Connection.h Server.cpp Server.h SocketManager.cpp SocketManager.h UserManager.cpp UserManager.h
AM_CFLAGS = 
AM_CXXFLAGS = -Wall -Werror
AM_FFLAGS = 
SUBDIRS = 
